samples/_failures_safe/1761456702_701ed1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0488af1e.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_0488af1e.c:150: error: expected ‘{’ at end of input
